--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,12 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "google/cloud": "^0.30.1",
+        "guzzlehttp/guzzle": "~5.0",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
-        "shpasser/gae-support-l5": "~1.0"
+        "league/flysystem-aws-s3-v2": "~1.0",
+        "superbalist/laravel-google-cloud-storage": "^1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
