--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,8 @@
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
+        "laracasts/generators": "^1.1",
+        "way/generators": "~2.0",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~5.7"
     },
